# EdgeComputing-BIRDS

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
MoleNet/: bird_sender.py  boot.py  time_sync.py  ttn_formatter.js
dataset_reconstruction/: README.md  run_pipeline.py
dataset_reconstruction/own_images/: metadata.csv
dataset_reconstruction/scripts/: build_dataset_96.py  count_processed.py  count_raw.py  extract_coco_birds.py  extract_coco_negatives.py  extract_garden_frames.py  extract_lila_camera_trap_negatives.py  extract_lila_camera_trap_positives.py  extract_selected_cub_species.py  import_esp32_camera_data.py  merge_negative_datasets.py  merge_positive_datasets.py  prep_garden_negatives_96.py
main/: CMakeLists.txt  Kconfig.projbuild  app_camera_esp.c  app_camera_esp.h  bird_detection_storage.c  bird_detection_storage.h  detection_responder.cc  detection_responder.h  esp_main.h  http_server.c  idf_component.yml  image_provider.cc  image_provider.h  main.c  main_functions.cc  main_functions.h  model_settings.cc  model_settings.h  object_detection_model.cc  object_detection_model.h  wifi_ap.c
model/V1/: bird_detector_model.cc
model/V5/: bird_detector_int8.tflite  bird_detector_model_data.h
